# llbuild.ml

./: .gitignore  shell.nix
bindings/: bindings.ml  dune
libllbuild/: dune  llbuild.ml
stubgen/: bindings_c_gen.ml  dune
