(library
 (name llbuild)
 (synopsis "libllbuild ocaml")
 (flags
  (:standard -w -9 -cclib -lllbuild))
 (libraries bindings ctypes.stubs ctypes ctypes.foreign))

(rule
 (targets bindings_stubs.ml)
 (deps ../stubgen/bindings_stubs_gen.exe)
 (action
  (with-stdout-to
   %{targets}
   (run %{deps} -ml))))
